# open-growth-intel

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  open-growth-intel-proposal.md  pyproject.toml
cli/: landing_builder.py  main.py  page_builder.py  requirements.txt
docs/: competitor-methodology.md  landing-types.md  project-proposal.md  sensitive-data-policy.md  site-architecture.md  skill-guide.md
examples/: brands.example.yaml  competitors.example.yaml  pages_manifest.example.yaml
examples/outputs/: sample-competitor-report.md
site/: index.html  maintenance.html  worklog.html
site/assets/css/: main.css
site/assets/js/: theme.js
skills/competitor-report/: SKILL.md
skills/growth-site/: SKILL.md
skills/landing-builder/: SKILL.md
templates/components/: faq-schema.html  footer.html  nav.html  theme-toggle.html  webapp-schema.html
templates/landing/article/: base.html
templates/landing/type-a/: base.html
templates/landing/type-b/: base.html
templates/landing/type-c/: base.html
tests/: test_cli.py  test_landing_cli.py
tmp/landing-smoke/: type-a.html
