[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-growth-intel"
version = "0.1.0"
description = "Open-source growth intelligence toolkit: Claude Code Skills + Python CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = " tangyuan"}
]
keywords = ["seo", "geo", "growth", "claude-code", "landing-page", "competitor-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "html2text>=2024.2.26",
    "pyyaml>=6.0.1",
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ogi = "cli.main:app"

[project.urls]
Homepage = "https://github.com/example/open-growth-intel"
Repository = "https://github.com/example/open-growth-intel"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
